Jupyter notebook about unix using python advanced

--- a/python/ipython_para_sistemas_unix.ipynb
+++ b/python/ipython_para_sistemas_unix.ipynb
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -589,14 +589,13 @@
      "output_type": "stream",
      "text": [
       "Current bookmarks:\n",
-      "h       -> /home/\n",
       "my_home -> /home/$(whoami)\n",
       "t       -> /tmp\n"
      ]
     }
    ],
    "source": [
-    "bookmark -l"
+    "%bookmark -l"
    ]
   },
   {
@@ -648,6 +647,13 @@
    "source": [
     "## dhist"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
