Refactor python programm

--- a/python/ipython_for_unix_system/ipython_para_sistemas_unix.ipynb
+++ b/python/ipython_for_unix_system/ipython_para_sistemas_unix.ipynb
@@ -649,18 +649,315 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "El comando `dhist` no solamente guarda el histórico de la sesión actual sino de sesiones anteriores."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory history (kept in _dh)\n",
+      "0: /home/nachoaz/igarag/programming/python\n"
+     ]
+    }
+   ],
+   "source": [
+    "dhist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Puede pasarsele argumentos para especificar, por ejemplo, la salida máxima del comando, haciendo una lista de los últimos 5 elementos de la historia con: `dhist 5` o un rango entre valores con `dhist 3 7` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aplicación de Variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hasta ahora había una clara diferencia entre los comandos de shell e IPython pero vamos a ver que se pueden cruzar. Se va a tomar un valor que obtendremos de Python y pasarlo a la Shell. Aunque el ejemplo es \"poco realista\" dado que es raro crear 10 archivos con la fecha dentro, nos da una idea de la utilidad en el cruce de información entre ambos lenguajes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# {} = elemento actual de la lista\n",
+    "for i in range(3):\n",
+    "    !date > {i}.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 60\n",
+      "-rw-rw-r-- 1 nachoaz nachoaz 57778 ago  3 13:24 ipython_para_sistemas_unix.ipynb\n",
+      "cat: 0.txt: No such file or directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l\n",
+    "\n",
+    "!cat 0.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Eliminamos los archivos creados en el apartado anterior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm *.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Procesado de cadena"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mOtra herramienta muy interesante que ofrece IPython es procesar en cadena el resultado de los comandos de shell del sistema. Si, por ejemplo, se quiere ver el PID de todos los procesos que pertenecen a un usuario se podría hacer de la siguiente manera: \n",
+    "\n",
+    "`ps aux | awk '{if ($1 == \"myuser\") print $2}'`\n",
+    "\n",
+    "Si ahora intentamos repetir el proceso usando IPython hay que hacerlo en una pequeña secuencia que es igualmente legible."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps = !ps aux\n",
+    "ps.grep('mysuer', prune=False).fields(0, 1, 8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El argumento `prune` se utiliza para que el retorno del argumento sea lo contrario a lo que se quiere o lo que se quiere. Por ejemplo, si quisieramos que el retorno fuera 'todos los usuarios que no sean el nuestro' (`root` por ejemplo) se pondría: `ps.grep('myuser', prune=True)`, es decir, __excluir__ del filtrado. De esa manera devuelve todos los usuarios que no sean `myuser`.\n",
+    "\n",
+    "Con el método `fields()` se le especifican a `grep` las columnas que queremos devolver una vez se ejecute el comando. Hace las veces cuando se imprime una columna con `awk` utilizando `$1`, `$2`. En el ejemplo anterior, las columnas `0`, `1` y `8` hacen referencia a `USERNAME`, `PID` y `STARTTIME`.\n",
+    "\n",
+    "Otro elemento muy interesante es, seguido del método `fields()` que va seguido del método `grep()` y que ambos devuelven objetos del mismo tipo, se puede añadir el elemento `s` que accede directamente a la lista en el proceso. Esto proporciona una cadena de PID separados por espacio con la que la Shell ya puede trabajar y de podría, por ejemplo hacer `kill $pids` desde dentro de IPython.\n",
+    "\n",
+    "Por último, el método `grep()` adopta un último parámetro opcional denominado `field`. Si se especifica, los criterios de búsqueda tienen que coincidir con ese campo para que se incluya en el resultado. Esto coincidía con las dilas exactas que se quieren pero mostraba toda la fila. Para llegar solo al PID hay que añadirle `fields(1)` detrás."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2418',\n",
+       " '2419',\n",
+       " '2439',\n",
+       " '2440',\n",
+       " '2478',\n",
+       " '2513',\n",
+       " '2546',\n",
+       " '2548',\n",
+       " '2549',\n",
+       " '2552',\n",
+       " '2569',\n",
+       " '2583',\n",
+       " '2584',\n",
+       " '2587',\n",
+       " '2590',\n",
+       " '2598',\n",
+       " '2603',\n",
+       " '2607',\n",
+       " '2612',\n",
+       " '2614',\n",
+       " '2618',\n",
+       " '2621',\n",
+       " '2625',\n",
+       " '2647',\n",
+       " '2657',\n",
+       " '2662',\n",
+       " '2668',\n",
+       " '2689',\n",
+       " '2712',\n",
+       " '2715',\n",
+       " '2716',\n",
+       " '2722',\n",
+       " '2724',\n",
+       " '2727',\n",
+       " '2737',\n",
+       " '2745',\n",
+       " '2754',\n",
+       " '2762',\n",
+       " '2796',\n",
+       " '2800',\n",
+       " '2805',\n",
+       " '2827',\n",
+       " '2846',\n",
+       " '2950',\n",
+       " '2967',\n",
+       " '3021',\n",
+       " '3037',\n",
+       " '3038',\n",
+       " '3039',\n",
+       " '3040',\n",
+       " '3041',\n",
+       " '3046',\n",
+       " '3051',\n",
+       " '3052',\n",
+       " '3058',\n",
+       " '3067',\n",
+       " '3084',\n",
+       " '3085',\n",
+       " '3087',\n",
+       " '3095',\n",
+       " '3149',\n",
+       " '3180',\n",
+       " '3187',\n",
+       " '3346',\n",
+       " '3374',\n",
+       " '3479',\n",
+       " '4897',\n",
+       " '5164',\n",
+       " '5566',\n",
+       " '5912',\n",
+       " '5920',\n",
+       " '5943',\n",
+       " '6349',\n",
+       " '6353',\n",
+       " '6359',\n",
+       " '6360',\n",
+       " '6373',\n",
+       " '6403',\n",
+       " '6453',\n",
+       " '6560',\n",
+       " '6562',\n",
+       " '6573',\n",
+       " '6580',\n",
+       " '6621',\n",
+       " '6627',\n",
+       " '6628',\n",
+       " '6632',\n",
+       " '6640',\n",
+       " '6669',\n",
+       " '6767',\n",
+       " '6773',\n",
+       " '6987',\n",
+       " '6993',\n",
+       " '7015',\n",
+       " '7028',\n",
+       " '7271',\n",
+       " '7414',\n",
+       " '7766',\n",
+       " '7774',\n",
+       " '7776',\n",
+       " '7784',\n",
+       " '7969',\n",
+       " '9033',\n",
+       " '9090',\n",
+       " '9367',\n",
+       " '9469',\n",
+       " '11493',\n",
+       " '11753',\n",
+       " '12363',\n",
+       " '12368',\n",
+       " '12381',\n",
+       " '12402',\n",
+       " '12587',\n",
+       " '13264',\n",
+       " '14311',\n",
+       " '14315',\n",
+       " '14492',\n",
+       " '14494',\n",
+       " '14523',\n",
+       " '14547',\n",
+       " '14580',\n",
+       " '14648',\n",
+       " '14649',\n",
+       " '16443',\n",
+       " '22298',\n",
+       " '26178',\n",
+       " '27147',\n",
+       " '28973']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps = !ps aux\n",
+    "ps.grep('nachoaz', field=0).fields(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Perfil sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un perfil es simplemente un conjunto de datos de configuracioń que se carga cuando se inicia IPython. Puede personalizarse un número de perfiles para hacer qye IPython se lleve a cabo de diferentes formas dependiendo de las necesidades de la sesión. Para invocar un perfil específico se utiliza la opción de línea de comando `-p` y se especifica el perfil que se quiere utilizar.\n",
+    "\n",
+    "El perfil `sh` es el más utilizado dado que incorpora ciertos elementos de configuración de modo que IPython se convierte en una shell del sistema más amigable.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
