ipython for unix system advanced

--- a/python/ipython_for_unix_system/ipython_para_sistemas_unix.ipynb
+++ b/python/ipython_for_unix_system/ipython_para_sistemas_unix.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para conocer un ejemplo de uso de una de las funciones puede añadirse un `?` detrás de la función como en el ejemplo. PUede obtenerse más ayuda si se introducen dos `??`."
+    "Para conocer un ejemplo de uso de una de las funciones puede añadirse un `?` detrás de la función como en el ejemplo. Puede obtenerse más ayuda si se introducen dos `??`."
    ]
   },
   {
@@ -1236,7 +1236,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Expresiones regulares (re)"
+    "## Expresiones regulares (re)\n",
+    "\n",
+    "El patrón que buscaremos tiene que coincidir con dos llaves abiertas consecutivas seguidas por cualquier texto ( o no texto) seguido por dos llaves cerradas consecutivas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COINCIDENCIAS->  palabras\n",
+      "COINCIDENCIAS->  corchetes\n",
+      "COINCIDENCIAS->  ejemplo\n",
+      "COINCIDENCIAS->  expresión regular\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "re_string = \"{{(.*?)}}\"\n",
+    "some_string = \"Esta cadena contiene {{palabras}} dentro de {{corchetes}} para mostrar un {{ejemplo}} de {{expresión regular}}\"\n",
+    "\n",
+    "# findall retorna una lista con las coincidencias en la expresión regular\n",
+    "for match in re.findall(re_string, some_string):\n",
+    "    print(\"COINCIDENCIAS-> \", match)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['palabras', 'corchetes', 'ejemplo', 'expresión regular']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(re_string, some_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Otra manera de trabajar con expresiones regulares en Python es mediante la creación de un objeto de **expresión regular compilada** y utilizar los métodos de ese objeto.\n",
+    "\n",
+    "Una **expresión regular compilada** es un objeto que se creó al pasar un patrón a `re.compile()`. Contiene un número de métodos de expresión regular que se crearon al pasar un patrón a `re.compile()`. Existen dos diferencias principales entre utilizar los ejemplos compilados y no compilados. Primero, en lugar de mantener una referencia al patrón de expresión regular \"`{{(.*?)}}`\" se crea un objeto de expresión regular compilada y se utiliza el patrón para crearlo. En segundo lugar, en lugar de invocar a `findall()` del módulo `re` se invoca `findall()` en el objeto de expresión regular compilada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COINCIDENCIAS->  palabras\n",
+      "COINCIDENCIAS->  corchetes\n",
+      "COINCIDENCIAS->  ejemplo\n",
+      "COINCIDENCIAS->  expresión regular\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "re_obj = re.compile(\"{{(.*?)}}\")\n",
+    "some_string = \"Esta cadena contiene {{palabras}} dentro de {{corchetes}} para mostrar un {{ejemplo}} de {{expresión regular}}\"\n",
+    "\n",
+    "for match in re_obj.findall(some_string):\n",
+    "    print(\"COINCIDENCIAS-> \", match)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El segundo método (expresión regular compilada) es mucho más eficiente en términos de tiempo de búsqueda por lo que es recomendable su uso en vez de la primera opción."
    ]
   },
   {
