Subprocess module reviewed.

--- a/python/ipython_for_unix_system/ipython_para_sistemas_unix.ipynb
+++ b/python/ipython_for_unix_system/ipython_para_sistemas_unix.ipynb
@@ -1331,6 +1331,308 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subprocess\n",
+    "\n",
+    "Subprocess puede realizar las siguientes operaciones: originar nuevos procesos conectados a entrada salida, conectados a salida estandar, conectados a flujos de error y escuchando código de retorno. Para entender el funcionamiento se aplicará un ejemplo sencillo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "subprocess.call('df -k', shell=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La salida de este comando es un $0$ dado que, al ser un subproceso está saliendo por la salida estandar, que en este caso es la que origina Jupyter, el terminal. Si vemos en el terminal donde se lanzó el cuadernillo vemos la salida del comando. Los códigos de retorno más comunes son:\n",
+    "- 0: Éxito\n",
+    "- 1: Errores generales\n",
+    "- 2: Mal uso de programas internos en shell.\n",
+    "- 126: El comando invocado no se puede ejecutar.\n",
+    "- 127: Comando no encontrado\n",
+    "- 128: Argumento no válido para salid.\n",
+    "- 130: Script terminado por Control-C."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A `subprocess.call()` se le pueden añadir más opciones como:\n",
+    "\n",
+    "```python\n",
+    "subprocess.call(\"ping -c 1 10.0.1.1\",\n",
+    "                shell=True,\n",
+    "                stdout=open('/dev/null', 'w'),\n",
+    "                stderr=subprocess.STDOUT)\n",
+    "```\n",
+    "\n",
+    "Si se necesita **capturar la salida de un comando** se utiliza `subprocess.Popen`. Otra diferencia importante es que `subprocess.call()` se queda bloqueado esperando una respuesta mientras que `suprocess.Popen()`, no."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filesystem      Size   Used  Avail Capacity iused               ifree %iused  Mounted on\n",
+      "/dev/disk1s1   113Gi   83Gi   27Gi    76% 1397313 9223372036853378494    0%   /\n",
+      "devfs          190Ki  190Ki    0Bi   100%     658                   0  100%   /dev\n",
+      "/dev/disk1s4   113Gi  2.0Gi   27Gi     7%       3 9223372036854775804    0%   /private/var/vm\n",
+      "map -hosts       0Bi    0Bi    0Bi   100%       0                   0  100%   /net\n",
+      "map auto_home    0Bi    0Bi    0Bi   100%       0                   0  100%   /home\n",
+      "/dev/disk2s1    60Gi   16Gi   44Gi    27%  127071              361625   26%   /Volumes/ext.DISK\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = subprocess.Popen('df -h', shell=True, stdout=subprocess.PIPE)\n",
+    "out = p.stdout.readlines()\n",
+    "\n",
+    "for line in out:\n",
+    "    print(line.strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nota: *args y *kargs\n",
+    "\n",
+    "`*args` y `**kwargs` permiten pasar un número variable de argumentos a una función cuando no sabes de antemano cuántos argumentos puede pasar el usuario a la función, así que en este caso usas estas dos palabras clave cuya diferencia está en que la segunda hace referencia a un diccionario. A continuación, dos ejemplos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "test_var_args() got an unexpected keyword argument 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-f5ed925f94e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0;34m\"another arg through *argv :\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mtest_var_args\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'yasoob'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlanguage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'python'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0meat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'eggs'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'test'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: test_var_args() got an unexpected keyword argument 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "def test_var_args(f_arg, *argv):\n",
+    "    print \"first normal arg:\", f_arg\n",
+    "    for arg in argv:\n",
+    "        print \"another arg through *argv :\", arg\n",
+    "\n",
+    "test_var_args('yasoob','python','eggs','test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arg1 == 5\n",
+      "arg2 == two\n",
+      "arg3 == 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test_kwargs(**kwargs):\n",
+    "    if kwargs is not None:\n",
+    "        for key, value in kwargs.iteritems():\n",
+    "            print \"%s == %s\" %(key, value)\n",
+    " \n",
+    "\n",
+    "my_kwargs = {\"arg3\": 3, \"arg2\": \"two\",\"arg1\":5}\n",
+    "greet_me(**my_kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arg1 == 3\n",
+      "arg2 == two\n",
+      "arg3 == 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test_kwargs(**kwargs):\n",
+    "    if kwargs is not None:\n",
+    "        for key, value in kwargs.iteritems():\n",
+    "            print \"%s == %s\" %(key, value)\n",
+    " \n",
+    "test_kwargs(arg1=3, arg2=\"two\", arg3=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lo que permite las funciones de Python `*args` y `**kwargs` es poder definir funciones donde se le pasarán distintos números de argumentos definiendo una única función. Por ejemplo, ejecutar secuencias de comandos o ejecutar comandos en distintas máquinas podría estar contenido en una función como esta:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multi(*args):\n",
+    "    for cmd in args:\n",
+    "        p = subprocess.Popen(cmd, shell=True, stdout=subprocess.PIPE)\n",
+    "        out = p.stdout.read()\n",
+    "        print(out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "También puede comunicarse escribiendo en `stdin`. La utilidad de contar palabras se le dirá que escuche la entrada estándar y luego se escribirá una cadena de caracteres para que procese la utilidad. *Recordar que el resultado sale por la terminal*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = subprocess.Popen(\"wc -c\", shell=True, stdin=subprocess.PIPE)\n",
+    "p.communicate(\"holaquetal\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Puede hacerse el mismo proceso leyendo de un archivo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('text.txt', 'w') as file:\n",
+    "    file.write(\"holaquetal\")\n",
+    "    \n",
+    "file = open('text.txt')\n",
+    "f = file.read()\n",
+    "\n",
+    "p = subprocess.Popen(\"wc -c\", shell=True, stdin=subprocess.PIPE)\n",
+    "p.communicate(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sería equivalente en bash a:\n",
+    "\n",
+    "```bash\n",
+    "wc -c < text.txt\n",
+    "\n",
+    "10\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para encadenar comandos con Subprocess como haríamos en Bash: `cat /etc/passwd | grep 0:0 | cut -d ':' -f 7` hay que enlazar la salida de uno con la entrada `stdin` del siguiente de la siguiente manera:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "p1 = subprocess.Popen('cat /etc/passwd', shell=True, stdout=subprocess.PIPE)\n",
+    "p2 = subprocess.Popen('grep 0:0', shell=True, stdin=p1.stdout, stdout=subprocess.PIPE)\n",
+    "p3 = subprocess.Popen(\"cut -d ': ' -f 7\", shell=True, stdin=p2.stdout, stdout=subprocess.PIPE)\n",
+    "print(p3.stdout.read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este caso no sería necesario concatenera subprocesos para obtener esa información, bastaría con utilizar el módulo de Python `pwd` y hacer un `pwd.getpwnam('root')` para obtener una lista cuyo último elemento es el mismo que todo el proceso realizado con los subproces: `/bin/sh`. Se muestra el proceso de concatenación a modo ilustrativo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1340,21 +1642,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
